Adição de funcionalidades
foram adicionados o Encriptador, o verificador de Username e o UserRepository

--- a/SistemaWeb/pom.xml
+++ b/SistemaWeb/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>lombok</artifactId>
             <scope>annotationProcessor</scope>
         </dependency>
+        <dependency>
+            <groupId>at.favre.lib</groupId>
+            <artifactId>bcrypt</artifactId>
+            <version>0.10.2</version>
+        </dependency>
     </dependencies>
 
     <build>
