--- a/SistemaWeb/src/main/resources/application.properties
+++ b/SistemaWeb/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url= jdbc:mysql://localhost:3306/bancodedadosdinhakid
 spring.datasource.username=root
 spring.datasource.password=Kate1929@
 spring.jpa.hibernate.ddl-auto=update
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix= /WEB-INF/views/
+spring.mvc.view.suffix=.html
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
