--- a/SistemaWeb/src/main/resources/application.properties
+++ b/SistemaWeb/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Kate1929@
 spring.jpa.hibernate.ddl-auto=update
 #spring.mvc.view.prefix= /WEB-INF/views/
 #spring.mvc.view.suffix=.html
-spring.thymeleaf.prefix=classpath:/templates/
+Sspring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
