Criação da Category
Com essas alterações é possivel fazer um crud de categorias

--- a/SistemaWeb/src/main/resources/application.properties
+++ b/SistemaWeb/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=SistemaWeb
 spring.datasource.url= jdbc:mysql://localhost:3306/bancodedadosdinhakid
 spring.datasource.username=root
 # senha Rodrigo:
-# spring.datasource.password=Kate1929@
+ spring.datasource.password=Kate1929@
 # senha Micael:
-spring.datasource.password=kate1929@
+# spring.datasource.password=kate1929@
 spring.jpa.hibernate.ddl-auto=update
 
 # Configurações do Thymeleaf
