--- a/SistemaWeb/src/main/resources/application.properties
+++ b/SistemaWeb/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML
+spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
